--- a/03-cordova/www/index.html
+++ b/03-cordova/www/index.html
@@ -41,6 +41,7 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
+                <div id="deviceProperties"></div>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
